[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://game/ui/PlayerTurnPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlayerTurnPanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 340.0
offset_top = -120.0
offset_right = 620.0
offset_bottom = -20.0
custom_minimum_size = Vector2(280, 100)
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1's Turn"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="TurnInfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Turn 1 - 3 units remaining"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 12
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="EndTurnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
text = "End Player 1's Turn"
theme_override_font_sizes/font_size = 14